# SQLiteClient

./: .gitignore  CMakeLists.txt  README.md  db_schema.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/: .gitignore
src/: main.cpp
src/core/: Cache.h  Internal.cpp  Internal.h  MainWindow.cpp  MainWindow.h  Noncopyable.h  Session.cpp  Session.h  Singleton.h  UiRenderer.cpp  UiRenderer.h  Window.cpp  Window.h
src/models/: Customer.cpp  Customer.h  DbEntity.cpp  DbEntity.h  Order.cpp  Order.h  OrderProduct.cpp  OrderProduct.h  Product.cpp  Product.h  Supplier.cpp  Supplier.h
src/utils/: Utils.cpp  Utils.h
